<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buscaminas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="actividad2">Juego Buscaminas</string>
    <string name="credito">Créditos</string>
    <string name="nombre1">Edison Sánchez</string>
    <string name="nombre2">Adrián Aguilar</string>
    <string name="nombre3">Kevin Filella</string>
    <string name="dificultad">Dficultad</string>
    <string name="facil">Facil</string>
    <string name="dificil">Dificil</string>
    <string name="medio">Medio</string>
    <string name="personalizado">Personalizado</string>
    <string name="scores">High Scores</string>

</resources>
