<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtcredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/credito"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/nombre1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/nombre2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_weight="0.02"
                android:text="@string/nombre3"
                android:textAppearance="@string/nombre1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:scaleType="fitXY"
                android:src="@drawable/fiecweb" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>